--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">timeTrack</string>
+    <string name="app_name">Tracky</string>
     <string name="action_settings">Settings</string>
 </resources>
